[package]
name = "vmine"
version = "0.1.0"
edition = "2024"

[dependencies]
hex = "0.4.3"
hex-literal = "1.1.0"

[build-dependencies]
cc = "1.2.54"

[profile.release]
opt-level = 3
lto = true          # Link Time Optimization für maximale Geschwindigkeit
codegen-units = 1   # Langsameres Kompilieren, aber schnellerer Code
panic = "abort"     # Spart Binärgröße und etwas Performance
