[package]
name = "verushash-rs"
version = "0.1.0"
authors = ["flopetautschnig (floscodes) <mail@floscodes.net>"]
description = "Rust bindings for the VerusHash algorithm, providing easy access to Verus hashing functions from Rust."
edition = "2024"

[dependencies]
hex = "0.4.3"
hex-literal = "1.1.0"

[build-dependencies]
cc = "1.2.54"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1   
panic = "abort"     
