[package]
name = "verushash-rs"
version = "0.1.0"
authors = ["flopetautschnig (floscodes) <mail@floscodes.net>"]
description = "Rust bindings for the VerusHash algorithm, providing easy access to Verus hashing functions from Rust."
repository = "https://github.com/floscodes/verushash-rs"
homepage = "https://github.com/floscodes/verushash-rs"
documentation = "https://docs.rs/verushash-rs"
readme = "README.md"
keywords = [
    "verushash",
    "verus",
    "pow",
    "blockchain",
    "hashing",
    "crypto",
    "cryptography",
    "mining",
    "ffi",
    "rust"
]
categories = [
    "cryptography",
    "algorithm",
    "network-programming"
]
edition = "2024"


[dev-dependencies]
hex = "0.4.3"

[build-dependencies]
cc = "1.2.55"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1   
panic = "abort"     
